ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: testapp.jeostats.com
    http:
      paths:
      - backend:
          service:
            name: java-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
